fixed height of home page card on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -59,7 +59,7 @@ a {
 }
 
 .hero-flipper-mobile {
-  height: 100px;
+  min-height: 100px;
   background-color:white;
   margin-bottom: 20px;
   display: inline-block;
